add recovery password
