# src/controllers/authController.js
@@ -1,19 +1,31 @@
 const User = require('../models/User');
-const {sendVerificationEmail, verifyCode} = require('../config/email'); 
+const sendEmail = require('../config/email'); 
+const VerificationCode = require('../middlewares/codesMiddleware')
 const bcrypt = require('bcryptjs');
 const jwt = require('jsonwebtoken');
 require('dotenv').config();
 
-exports.sendCode = async (req, res) => {
+exports.sendCodeRegister = async (req, res) => {
   const { email } = req.body;
   const existingUser = await User.findByEmail(email);
 
   if (existingUser) {
-    return res.status(409).json({ message: 'El correo electrónico ya está registrado, , intente con otro' });
+    return res.status(409).json({ message: 'El correo electrónico ya está registrado, intente con otro' });
   }
-
+  
   try {
-    await sendVerificationEmail(email);
+    const code = Math.floor(1000 + Math.random() * 9000).toString(); //código de 4 digitos
+    const expiration = new Date(Date.now() + 60*60*1000); // 1 hora de expiración
+    VerificationCode.ceateCode(email, code, expiration);
+    await sendEmail(
+      email,
+      "Codigo de verificación.",
+      `
+      <h2>¡Bienvenido! Al sistema de prestamos de portatiles 💻</h2>
+      <p>Tu código de verificación es: <strong style="color: blue;">${code}</strong>.</p>
+      <p >Este código expira en 1 hora a las ${expiration}</p>
+      `
+      );
     res.status(200).json({ message: 'Código de verificación enviado al correo. Verifica tu correo para continuar' });
   } catch (error) {
     console.log(error);
@@ -21,17 +33,63 @@ exports.sendCode = async (req, res) => {
   }
 };
 
+exports.sendCodeRecovery = async (req, res) => {
+  const { email } = req.body;
+  const existingUser = await User.findByEmail(email);
+
+  if (!existingUser) {
+    return res.status(409).json({ message: 'Este correo no esta registrado en nuestra base de datos' });
+  }
+
+  try {
+    const expiration = new Date(Date.now() + 30*60*1000); // 30 minutos de expiración
+    const code = Math.floor(1000 + Math.random() * 9000).toString(); //código de 4 digitos
+    await VerificationCode.ceateCode(email, code, expiration);
+    await sendEmail(
+      email,
+      "Recuperar contraseña.",
+      `
+      <h2>¡Hola! ¿Estas tratando de cambiar tu contraseña? 🤔 </h2>
+      <p> Si no es así ignora este mensaje </p>
+      <br>
+      <p>Tu código de verificación es: <strong style="color: blue;">${code}</strong>.</p>
+      <p >Este código expira en 30 minutos a las ${expiration}</p>
+      `
+      );
+    res.status(200).json({ message: 'Código de verificación enviado al correo. Verifica tu correo para continuar' });
+  } catch (error) {
+    console.log(error);
+    res.status(500).json({ message: 'Error en el envío del código', error: error.message});
+  }
+};
+
+exports.verifyCode = async (req, res) => {
+  const { email, code } = req.body;
+
+  try {
+    const isValid =  await VerificationCode.verifyCode(email, code); 
+  
+    if (!isValid) {
+      return res.status(400).json({ message: 'Código de verificación incorrecto o ha expirado' });
+    }
+    res.status(200).json({ message: 'Código de verificación aceptado' });
+  } catch (error) {
+    console.log(error);
+    res.status(500).json({ message: 'Error validando el codigo', error: error.message});
+  }
+};
 
 exports.registerStudent = async (req, res) => {
   const { email, password , code} = req.body;
 
   const existingUser = await User.findByEmail(email);
+
   if (existingUser) {
     return res.status(409).json({ message: 'El correo electrónico ya está registrado, , intente con otro' });
   }
   
   try {
-    const isValid =  await verifyCode(email, code); 
+    const isValid =  await VerificationCode.verifyCode(email, code); 
   
     if (!isValid) {
       return res.status(401).json({ message: 'Código de verificación incorrecto o ha expirado.' });
@@ -53,12 +111,36 @@ exports.registerStudent = async (req, res) => {
   }
 };
 
+exports.resetPassword = async (req, res) => {
+  const { email, password , code} = req.body;
+
+  try {
+    const isValid =  await VerificationCode.verifyCode(email, code); 
+    if (!isValid) {
+      return res.status(401).json({ message: 'Código de verificación incorrecto o ha expirado.' });
+    }
+
+    const user = await User.findByEmail(email);
+    if (!user) {
+      return res.status(404).json({ message: 'El correo del usuario no existe en la base de datos' });
+    }
+
+    const passwordHash = await bcrypt.hash(password, 10);
+    await User.updateUser(user.id, { password: passwordHash });
+
+    res.status(200).json({ message: 'Contraseña actualizada correctamente' });
+  } catch (error) {
+    console.log(error);
+    res.status(500).json({ message: 'Error actualizando la contraseña', error: error.message});
+  }
+};
+
 exports.login = async (req, res) => {
   const { email, password } = req.body;
   try {
     const user = await User.findByEmail(email);
     if (!user) {
-      return res.status(404).json({ message: 'El nombre de usuario no existe en la base de datos' });
+      return res.status(404).json({ message: 'El correo del usuario no existe en la base de datos' });
     }
     if (!(await bcrypt.compare(password, user.password))) {
       return res.status(401).json({ message: 'Contraseña incorrecta' });
